--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,26 @@
-.app {
-    padding-top: 120px;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
+.app {
+    margin-top: 3rem;
+    margin-bottom: 1rem;
+}
+
+@media (max-width: 860px) {
+    .app {
+        margin-top: 2.5rem;
+        margin-bottom: 4.5rem;
+    }
+}
+
+
 .pageTitle {
-    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    text-transform: uppercase;
+    padding: 3px 5px;
+    font-size: 1.4rem;
 }
