--- a/src/App.css
+++ b/src/App.css
@@ -4,18 +4,32 @@
     box-sizing: border-box;
 }
 
+body {
+    background: #191919;
+    background: linear-gradient(90deg, rgb(28, 28, 28) 0%, rgba(63, 63, 65, 1) 49%, rgb(28, 28, 28) 100%);
+}
+
+.pages {
+    margin: 0 auto;
+    width: 75vw;
+}
+
 .app {
-    margin-top: 3rem;
+    margin-top: 3.5rem;
     margin-bottom: 1rem;
 }
 
 @media (max-width: 860px) {
     .app {
-        margin-top: 2.5rem;
+        margin-top: 3rem;
         margin-bottom: 4.5rem;
     }
-}
 
+    .pages {
+        width: unset;
+        margin: 0 0;
+    }
+}
 
 .pageTitle {
     display: flex;
@@ -23,4 +37,5 @@
     text-transform: uppercase;
     padding: 3px 5px;
     font-size: 1.4rem;
+    color: #fff;
 }
