--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* border: .1px solid wheat; */
 }
 
 .navbar {
@@ -11,8 +12,16 @@
     background-color: #3f3e3e;
     display: flex;
     justify-content: center;
+    /* margin: 20px 0; */
     box-shadow: 0px 0px 19px #090909d4;
     z-index: 10;
+
+
+    backdrop-filter: blur(7px) saturate(0%);
+    -webkit-backdrop-filter: blur(5px) saturate(0%);
+    background-color: rgba(0, 0, 0, 0.621);
+    border-bottom: 1px solid rgba(112, 112, 112, 0.471);
+
 }
 
 .navlinks {
@@ -33,16 +42,30 @@
 
 .navlink {
     font-weight: 500;
-    padding: 10px 12px;
+    padding: 11px 12px;
     color: rgb(255, 255, 255);
+    text-decoration: none;
 }
 
 .navlink:hover {
-    background-color: #272727;
+    background-color: #2f2f2f;
 }
 
 .active {
-    background-color: #272727;
+
+    background-color: #2f2f2f;
+}
+
+.logoimg {
+    width: 109px;
+    filter: drop-shadow(0px 0px 10px rgb(0, 0, 0));
+
+}
+
+.icon {
+    text-shadow: 3px 3px rgb(9, 9, 9);
+    margin-right: 2px;
+
 }
 
 /* CSS for tablet and mobile devices */
@@ -58,25 +81,54 @@
         top: unset;
         bottom: 0;
         margin: 0;
+        backdrop-filter: unset;
+        -webkit-backdrop-filter: unset;
+        background-color: #3f3e3e;
+        border-bottom: unset;
+    }
+
+    .navlink:hover {
+        background-color: #181818;
+    }
+
+    .active {
+
+        background-color: #181818;
     }
 
     .navlinks {
         width: 100%;
         justify-content: center;
+        font-size: 1.2rem;
     }
 
     .logo {
         /* display: none; */
-        width: 100vw;
+        width: 100%;
         position: fixed;
+        z-index: 10;
         top: 0;
         background-color: #3f3e3e;
         text-align: center;
-        padding: 10px;
+        /* padding: 5px; */
+        display: flex;
+        justify-content: center;
+
+
+        backdrop-filter: blur(5px) saturate(0%);
+        -webkit-backdrop-filter: blur(5px) saturate(0%);
+        background-color: rgba(0, 0, 0, 0.29);
+        border-bottom: 1px solid rgba(209, 213, 219, 0.3);
     }
+
+    .logoimg {
+        width: 100px;
+    }
+
 
     .icon {
         display: block;
+        margin: 0;
     }
 
     .centernav {
@@ -94,6 +146,6 @@
     .navlink {
         text-align: center;
         width: 103px;
-        padding: 7px 0px;
+        padding: 3px 0px;
     }
 }
