--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ body {
     display: flex;
     justify-content: center;
     text-transform: uppercase;
-    padding: 3px 5px;
+    padding: 5px 0 0 0;
     font-size: 1.4rem;
     color: #fff;
 }
