--- a/src/components/ContentModal/ContentModal.css
+++ b/src/components/ContentModal/ContentModal.css
@@ -7,7 +7,7 @@
 }
 
 .paper {
-  width: 85%;
+  width: 80%;
   height: 85%;
   background-color: #060606;
   border-radius: 10px;
@@ -28,7 +28,6 @@
 }
 
 .tagline {
-  padding-bottom: 10px;
   align-self: center;
 }
 
@@ -51,7 +50,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  padding: 0 10px 10px 10px;
+  padding: 0 10px 0px 10px;
   width: 100%;
   height: 90%;
   box-shadow: 0px -10px 15px #060606;
@@ -65,9 +64,9 @@
 
 .ContentModal__description {
   display: flex;
-  height: 35%;
+  height: 30%;
   overflow-y: scroll;
-  padding: 15px;
+  padding: 10px;
   border-radius: 10px;
   scrollbar-width: thin;
   background-color: rgb(29, 29, 29);
@@ -95,6 +94,10 @@
     box-shadow: 0 0 50px rgba(0, 0, 0, 0.7);
   }
 
+  .tagline {
+    padding-bottom: 10px;
+  }
+
   .ContentModal__landscape {
     display: none;
   }
@@ -109,6 +112,7 @@
     justify-content: space-around;
     padding: 10px 10px 10px 0;
     border: 1px solid red;
+
     border-radius: 10px;
   }
 
@@ -117,6 +121,7 @@
     padding: 0;
     height: 100%;
     box-shadow: 0;
+    padding: 0 10px 10px 10px;
   }
 
   .ContentModal__title {
@@ -125,5 +130,6 @@
 
   .ContentModal__description {
     font-size: 18px;
+    padding: 15px;
   }
 }
