--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -59,7 +59,7 @@
 .logoimg {
     width: 109px;
     filter: drop-shadow(0px 0px 10px rgb(0, 0, 0));
-
+    pointer-events: none;
 }
 
 .icon {
@@ -99,7 +99,7 @@
     .navlinks {
         width: 100%;
         justify-content: center;
-        font-size: 1.2rem;
+        font-size: 1.12rem;
     }
 
     .logo {
