--- a/src/components/Pagination/CustomPagination.css
+++ b/src/components/Pagination/CustomPagination.css
@@ -2,11 +2,12 @@
 
     display: flex;
     justify-content: center;
-    margin: 20px;
+    margin: 10px;
 }
 
 @media screen and (max-width: 860px) {
     .paginationStyle {
-        margin: 0 0 80px 0;
+        margin: 3px 0 0px 0;
+        /* background-color: red; */
     }
 }
